Fix: Uncomment DOCTYPE and add logo to admin.html header

--- a/public/admin.html
+++ b/public/admin.html
@@ -1,4 +1,4 @@
-//   <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,7 +11,10 @@
 <body>
     <!-- Navigation Header -->
     <header class="header">
-        <div class="logo"><a href="index.html">Eduink</a></div>
+        <div class="logo">
+            <img src="icons/logo.png" alt="Eduink Logo" class="logo-img">
+            <a href="index.html">Eduink</a>
+        </div>
         <nav class="nav">
             <a href="index.html" class="nav-link">Home</a>
             <a href="developer.html" class="nav-link">Developer</a>
