--- a/public/video.html
+++ b/public/video.html
@@ -4,180 +4,175 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video Classes - Eduink</title>
-    <link rel="stylesheet" href="style.css">    <link rel="manifest" href="manifest.json">    <link rel="icon" href="icons/logo.png" type="image/png"></head>
+    <link rel="stylesheet" href="style.css">
+    <link rel="manifest" href="manifest.json">
+    <link rel="icon" href="icons/logo.png" type="image/png">
+</head>
 <body>
-    <!-- Navigation Header -->
-    <header class="header">
-        <div class="logo">
-            <a href="index.html">
-                <img src="icons/logo.png" alt="Eduink Logo" class="logo-img">
-                Eduink
-            </a>
-        </div>
-        <nav class="nav">
-            <a href="developer.html" class="nav-link">Developer</a>
-        </nav>
-    </header>
 
-    <!-- Main Content -->
-    <main class="main-container">
-        <div class="page-title" id="pageTitle">Video Classes</div>
-        
-        <div class="videos-container" id="videosContainer">
-            <!-- Videos will be loaded here dynamically -->
-            <div class="loading">Loading videos...</div>
-        </div>
-    </main>
+<header class="header">
+    <div class="logo">
+        <a href="index.html">
+            <img src="icons/logo.png" alt="Eduink Logo" class="logo-img">
+            Eduink
+        </a>
+    </div>
+    <nav class="nav">
+        <a href="developer.html" class="nav-link">Developer</a>
+    </nav>
+</header>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <p>&copy; 2026 Eduink. All rights reserved.</p>
-    </footer>
+<main class="main-container">
+    <div class="page-title" id="pageTitle">Video Classes</div>
+    <div class="videos-container" id="videosContainer">
+        <div class="loading">Loading videos...</div>
+    </div>
+</main>
 
-    <script>
-        // Function to get URL parameters
-        function getQueryParam(param) {
-            const urlParams = new URLSearchParams(window.location.search);
-            return urlParams.get(param);
-        }
+<footer class="footer">
+    <p>&copy; 2026 Eduink. All rights reserved.</p>
+</footer>
 
-        // Get class and subject from URL
-        const selectedClass = getQueryParam('class');
-        const selectedSubject = getQueryParam('subject');
+<script>
 
-        // Function to extract YouTube ID from URL or ID
-        function getYoutubeEmbedUrl(videoUrl) {
-            // If it's already a YouTube URL, extract the ID
-            if (videoUrl.includes('youtube.com') || videoUrl.includes('youtu.be')) {
-                let videoId;
-                if (videoUrl.includes('youtu.be')) {
-                    videoId = videoUrl.split('/').pop();
-                } else {
-                    const url = new URL(videoUrl);
-                    videoId = url.searchParams.get('v');
-                }
-                return `https://www.youtube.com/embed/${videoId}`;
-            }
-            // If it's just the video ID, use it directly
-            return `https://www.youtube.com/embed/${videoUrl}`;
-        }
+function getQueryParam(param) {
+    const urlParams = new URLSearchParams(window.location.search);
+    return urlParams.get(param);
+}
 
-        // Fetch videos from backend API with caching and graceful error handling
-        const VIDEO_STORAGE_KEY = `videoData_${selectedSubject || 'all'}_${selectedClass || 'all'}`;
+const selectedClass = getQueryParam('class');
+const selectedSubject = getQueryParam('subject');
 
-        // Render videos into the container. Accepts an array of video objects.
-        function renderVideos(videos) {
-            const container = document.getElementById('videosContainer');
-            container.innerHTML = ''; // replace with real content
+const VIDEO_STORAGE_KEY = `videoData_${selectedSubject || 'all'}_${selectedClass || 'all'}`;
 
-            if (!videos || videos.length === 0) {
-                container.innerHTML = '<div class="empty-state">No videos available yet.</div>';
-                return;
+function getYoutubeEmbedUrl(videoUrl) {
+    try {
+        if (!videoUrl) return '';
+
+        if (videoUrl.includes('youtube.com') || videoUrl.includes('youtu.be')) {
+            let videoId;
+
+            if (videoUrl.includes('youtu.be')) {
+                videoId = videoUrl.split('/').pop().split('?')[0];
+            } else {
+                const url = new URL(videoUrl);
+                videoId = url.searchParams.get('v');
             }
 
-            videos.forEach(video => {
-                const card = document.createElement('div');
-                card.className = 'video-card';
-
-                const embedUrl = getYoutubeEmbedUrl(video.videoUrl || video.video_url || '');
-
-                const contentHTML = `
-                    <h3>${video.title}</h3>
-                    <iframe 
-                        width="100%" 
-                        height="300" 
-                        src="${embedUrl}" 
-                        title="${video.title}"
-                        frameborder="0" 
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                        allowfullscreen>
-                    </iframe>
-                `;
-
-                card.innerHTML = contentHTML;
-                container.appendChild(card);
-            });
+            if (!videoId) return '';
+            return `https://www.youtube.com/embed/${videoId}`;
         }
 
-        // Show a non-blocking warning banner (keeps current video visible)
-        function showWarning(message) {
-            let banner = document.getElementById('videoWarningBanner');
-            if (!banner) {
-                banner = document.createElement('div');
-                banner.id = 'videoWarningBanner';
-                banner.style.background = '#fff3cd';
-                banner.style.border = '1px solid #ffeeba';
-                banner.style.padding = '8px 12px';
-                banner.style.margin = '8px 0';
-                banner.style.borderRadius = '4px';
-                banner.style.color = '#856404';
-                const container = document.getElementById('videosContainer');
-                container.parentNode.insertBefore(banner, container);
+        return `https://www.youtube.com/embed/${videoUrl}`;
+    } catch (e) {
+        console.error("Invalid YouTube URL:", videoUrl);
+        return '';
+    }
+}
+
+function renderVideos(videos) {
+    const container = document.getElementById('videosContainer');
+    container.innerHTML = '';
+
+    if (!videos || videos.length === 0) {
+        container.innerHTML = '<div class="empty-state">No videos available yet.</div>';
+        return;
+    }
+
+    videos.forEach(video => {
+
+        const rawUrl = video.videoUrl || video.video_url || '';
+        if (!rawUrl) return;
+
+        const embedUrl = getYoutubeEmbedUrl(rawUrl);
+        if (!embedUrl) return;
+
+        const card = document.createElement('div');
+        card.className = 'video-card';
+
+        card.innerHTML = `
+            <h3>${video.title}</h3>
+            <iframe 
+                width="100%" 
+                height="300" 
+                src="${embedUrl}" 
+                title="${video.title}"
+                frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                allowfullscreen>
+            </iframe>
+        `;
+
+        container.appendChild(card);
+    });
+}
+
+function showWarning(message) {
+    let banner = document.getElementById('videoWarningBanner');
+    if (!banner) {
+        banner = document.createElement('div');
+        banner.id = 'videoWarningBanner';
+        banner.style.background = '#fff3cd';
+        banner.style.padding = '8px';
+        banner.style.margin = '8px 0';
+        banner.style.borderRadius = '4px';
+        banner.style.color = '#856404';
+        const container = document.getElementById('videosContainer');
+        container.parentNode.insertBefore(banner, container);
+    }
+    banner.textContent = message;
+}
+
+async function loadVideosOnce() {
+
+    const container = document.getElementById('videosContainer');
+
+    if (!selectedClass || !selectedSubject) {
+        container.innerHTML = '<div class="error">Invalid class or subject.</div>';
+        return;
+    }
+
+    // Use cache first
+    try {
+        const cached = localStorage.getItem(VIDEO_STORAGE_KEY);
+        if (cached) {
+            const parsed = JSON.parse(cached);
+            if (parsed && Array.isArray(parsed.videos)) {
+                renderVideos(parsed.videos);
             }
-            banner.textContent = message;
-            console.warn('Video warning:', message);
+        }
+    } catch (err) {
+        console.error("Cache read error:", err);
+    }
+
+    try {
+        const response = await fetch(
+            `/api/videos/${encodeURIComponent(selectedSubject)}?class=${encodeURIComponent(selectedClass)}`,
+            { cache: "no-store" }
+        );
+
+        if (!response.ok) {
+            throw new Error("API Error");
         }
 
-        // Main loader: attempts to use cached data first, then fetch fresh once.
-        async function loadVideosOnce() {
-            const container = document.getElementById('videosContainer');
+        const videos = await response.json();
 
-            // Try to use cached data first for resilience
-            try {
-                const cached = localStorage.getItem(VIDEO_STORAGE_KEY);
-                if (cached) {
-                    const parsed = JSON.parse(cached);
-                    if (parsed && Array.isArray(parsed.videos)) {
-                        console.log('Using cached video data (localStorage).');
-                        renderVideos(parsed.videos);
-                    }
-                }
-            } catch (err) {
-                console.error('Error reading cached video data:', err);
-            }
+        localStorage.setItem(VIDEO_STORAGE_KEY, JSON.stringify({ videos }));
 
-            // Fetch from API once (do not poll)
-            try {
-                console.log('Fetching video data from API...');
-                const response = await fetch(`/api/videos/${selectedSubject}?class=${selectedClass}`);
+        renderVideos(videos);
 
-                if (!response.ok) {
-                    throw new Error(`API responded with status ${response.status}`);
-                }
+        document.getElementById('pageTitle').textContent =
+            `Class ${selectedClass} - ${selectedSubject} - Video Classes`;
 
-                const videos = await response.json();
+    } catch (error) {
+        console.error("Fetch error:", error);
+        showWarning("Server sleeping or refresh failed. Showing cached videos if available.");
+    }
+}
 
-                // Save to localStorage as a simple cache
-                try {
-                    localStorage.setItem(VIDEO_STORAGE_KEY, JSON.stringify({ videos, ts: Date.now() }));
-                    console.log('Saved video data to localStorage.');
-                } catch (err) {
-                    console.error('Failed to save video data to localStorage:', err);
-                }
+window.addEventListener('DOMContentLoaded', loadVideosOnce);
 
-                // Render new videos (replace only after successful fetch)
-                renderVideos(videos);
+</script>
 
-                // Update page title
-                document.getElementById('pageTitle').textContent = 
-                    `Class ${selectedClass} - ${selectedSubject} - Video Classes`;
-
-            } catch (error) {
-                console.error('Error fetching videos from API:', error);
-
-                // If fetch failed and nothing is displayed, show a friendly message
-                const hasChildren = container && container.children && container.children.length > 0;
-                if (!hasChildren) {
-                    container.innerHTML = '<div class="error">Error loading videos. Please try again later.</div>';
-                }
-
-                // Keep previous video visible (do not clear), and show a warning banner
-                showWarning('Could not refresh videos from server. Showing cached content if available.');
-            }
-        }
-
-        // Use DOMContentLoaded to run once as soon as DOM is ready
-        window.addEventListener('DOMContentLoaded', loadVideosOnce);
-    </script>
 </body>
 </html>
